[gd_scene load_steps=13 format=3 uid="uid://b5j0erwnwdkwd"]

[ext_resource type="Script" path="res://enemies/enemy.gd" id="1_0aqhb"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="1_jqks7"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="2_butr8"]
[ext_resource type="Script" path="res://components/destroyed_component.gd" id="4_6hkh1"]
[ext_resource type="Script" path="res://components/flash_component.gd" id="5_204rd"]
[ext_resource type="Script" path="res://components/move_component.gd" id="6_ls6r2"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="7_ne6op"]
[ext_resource type="Script" path="res://components/shake_component.gd" id="9_bkvpd"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="10_cklcf"]
[ext_resource type="PackedScene" uid="uid://d4du2p75v33rv" path="res://effects/explosion_effect.tscn" id="11_qjag2"]
[ext_resource type="AudioStream" uid="uid://78g0hauu467f" path="res://assets/audio/sfx/goatdamage.wav" id="12_bj7ly"]
[ext_resource type="Script" path="res://components/health_component.gd" id="14_45fnn"]

[node name="Enemy" type="Node2D" groups=["mobs"]]
script = ExtResource("1_0aqhb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5
script = ExtResource("1_jqks7")

[node name="HurtboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component", "scale_component", "flash_component")]
collision_layer = 2
collision_mask = 0
script = ExtResource("2_butr8")
health_component = NodePath("../HealthComponent")
scale_component = NodePath("../ScaleComponent")
flash_component = NodePath("../HurtFlashComponent")

[node name="DestroyedComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "health_component", "destroy_effect_spawner_component")]
script = ExtResource("4_6hkh1")
actor = NodePath("..")
health_component = NodePath("../HealthComponent")
destroy_effect_spawner_component = NodePath("../DestroyedSpawnerComponent")

[node name="HurtFlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("5_204rd")
sprite = NodePath("../AnimatedSprite2D")
flash_duration = 0.1

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("6_ls6r2")
actor = NodePath("..")

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("7_ne6op")
sprite = NodePath("../AnimatedSprite2D")

[node name="ShakeComponent" type="Node" parent="." node_paths=PackedStringArray("node")]
script = ExtResource("9_bkvpd")
node = NodePath("../AnimatedSprite2D")

[node name="DestroyedSpawnerComponent" type="Node2D" parent="."]
script = ExtResource("10_cklcf")
scene = ExtResource("11_qjag2")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("14_45fnn")

[node name="HurtSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_bj7ly")
volume_db = -10.0
bus = &"SFX"

[node name="DeathSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_bj7ly")
volume_db = -10.0
bus = &"SFX"
